got the nodes to connect for some unknown reason

--- a/src/main/webapp/WEB-INF/templates/views/hello-scalate.jade
+++ b/src/main/webapp/WEB-INF/templates/views/hello-scalate.jade
@@ -1,4 +1,6 @@
 - attributes("title") = "Scalatra: a tiny, Sinatra-like web framework for Scala"
-- attributes("headline") = "Welcome to Scalatra"
+- attributes("headline") = "Welcome to Scalatra EVERYBODY"
 
-p= "Hello, Scalate!"
+
+- var msg = "not my inside voice";
+p This is #{msg.toUpperCase()}
